* Fix hero sometimes moving in wrong directions (#677).
* Fix tunic and sword collision when their sprite is changed (#617).
* Fix slightly incorrect position of carried item sometimes (#660).
* Fix crash when a tileset image is missing (#590).
* Don't die if the animation of a pickable treasure is missing.

Lua API changes
---------------

Changes that introduce incompatibilities:

* Text surfaces: the default font is now the first one in alphabetical order.
* Text surfaces: the size must now be set at runtime instead of in fonts.dat.

Changes that do not introduce incompatibilities:

* sol.text_surface.create() now accepts a size parameter (default is 11).
* Add a function sol.main.get_os().
* Fix sprite:on_frame_changed() called twice on animation/direction change.

Data files format changes
-------------------------

You can use the script
editor/resources/tools/data_files_conversion/1.3_to_1.4/update_quest.lua
to automatically update your data files.
Don't forget to make a backup first.

* fonts.dat no longer exists. Fonts are a resource like others now (#611).
* Fonts are now in a 'fonts' directory instead of 'text'.


_________________________________

Solarus 1.3.1 (2014-08-25)
_________________________________

Bug fixes for the 1.3 release.

Solarus Quest Editor changes
----------------------------

* Fix opening an empty sprite (#581).
* Sort resources in the quest tree by natural order (#579).

_______________________________

Solarus 1.3.0 (2014-08-21)
_______________________________

The sprite editor release!

Engine changes
--------------

* Fix a crash when creating a timer from game:on_started() (#575).
* Fix hero:save_solid_ground having no effect on water/lava/prickles (#567).

Lua API changes
---------------

Changes that do not introduce incompatibilities:

* Add mouse functions and events.
* Add a method sprite:get_animation_set_id() (#552).
* Add a method sprite:has_animation() (#525).
* Add a method sprite:get_num_directions().